# auto-repair

./: CMakeLists.txt  README.md  autorepairUML.dot
data/: parts.csv
src/: main.cpp
src/domain/: customer.hpp  data_store.hpp  employee.hpp  maintenance_detector.cpp  maintenance_detector.hpp  part.hpp  person.hpp  service_item.hpp  vehicle.hpp  work_order.cpp  work_order.hpp
src/inventory/: inventory.hpp  observer.hpp  store_house.cpp  store_house.hpp
src/persistence/: data_store_persistence.cpp  data_store_persistence.hpp  file_repository.hpp  repository.hpp
src/report/: report_service.hpp
src/ui/: cli.cpp  cli.hpp  gui.cpp  gui.hpp
